--- a/templates/app/app.html.twig
+++ b/templates/app/app.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    hello world!
+    <div id="app">
+        <app></app>
+    </div>
 {% endblock %}
